feat: operator container end

--- a/source/_posts/2020-07-07-docker.md
+++ b/source/_posts/2020-07-07-docker.md
@@ -833,3 +833,489 @@ docker inspect --format‘{{json .State.Health}}’ web | python -m json.tool
 }
 ```
 
+##### ONBUILD为他人做嫁衣裳
+
+格式：ONBUILD`<其他指令>`
+
+ONBUILD是一个特殊的指令，后面跟着的是其他指令，例如RUN/COPY等，而这些指令，在当前镜像构建时不会被执行，只有当以当前镜像为基础，去构建下一个镜像才会执行
+
+Dockerfile中的其他指令都是为了定制当前镜像而准备的，ONBUILD是为了帮助别人定制自己准备的。Nodejs使用npm管理，拿到程序后，一般会先安装依赖，然后启动，一般会这么写Dockerfile
+
+```shell
+FROM node:slim
+RUN mkdir /app
+WORKDIR /app
+COPY ./package.json /app
+RUN ["npm","install"]
+COPY . /app/
+CMD ["npm","start"]
+```
+
+把这个Dockerfile放到Nodejs的根目录，构建好镜像后，就可以直接拿来启动容器运行，但是如果有第二个第三个差不多的项目，随着文件附件越多，版本控制就越难。
+
+如果在第一个Nodejs项目发现了Dockerfile存在的问题，比如敲错字，或者需要安装额外的包，然后开发人员修复了这个Docker，再次构建，问题解决。但是其他项目呢？虽然最初Dockerfile是复制、粘贴自第一个项目，但是并不会因为第一个项目修复了Dockerfile就会自动修复
+
+那么我们可以做一个基础镜像，然后各个项目使用这个基础镜像。镜像更新后就不用同步Dockerfile的变化，重新构建后就继续了基础镜像的更新：
+
+```shell
+FROM node:slim
+RUN mkdir /app
+WORKDIR /app
+CMD ["npm","start"]
+```
+
+这里把项目相关的构建指令拿出来，放在子项目去。假设这个基础镜像为my-node，各个项目内的Dockerfile就变成：
+
+```shell
+FROM my-node
+COPY ./package.json /app
+RUN ["npm","install"]
+COPY . /app/
+```
+
+基础镜像变化后，各个项目都用这个Dockerfile重新构建镜像，会基础基础镜像的更新。
+
+但是问题并没有完全解决，这个Dockerfile如果有东西要修改，又要重新一个一个修改。这样制作镜像只解决了原来Dockerfile的前4条指令的变化问题，而后面三条指令的变化则完全没办法处理
+
+ONBUILD可以解决这个问题：
+
+```shell
+FROM node:slim
+RUN mkdir /app
+WORKDIR /app
+ONBUILD COPY ./package.json /app
+ONBUILD RUN ["npm","install"]
+ONBULD COPY . /app/
+CMD ["npm","start"]
+```
+
+在构建镜像的时候，这三行并不会被执行，然后各个项目的Dockerfile就变成
+
+```shell
+FROM my-node
+```
+
+当在各个项目目录中，用这个只有一行的Dockerfile构建镜像时，之前基础镜像的那三行ONBUILD就会执行，成功的将当前项目的代码复制进镜像，并且针对本项目进行npm install，生成对应镜像
+
+#### 多阶段构建
+
+在17.05之前，构建Docker镜像通常会采用两种方式
+
+##### 全部放入一个Dockerfile
+
+一种方式是将所有的构建过程编包含在一个Dockerfile中，包括项目以及依赖库的编译、测试、打包等流程，这里可能会有一些问题：
+
+- Dockerfile特别长，可维护性降低
+- 镜像层次多，镜像体积较大，部署时间变长
+- 源代码存在泄漏的问题
+
+例如：编写app.go文件，输出Hello World!
+
+```go
+package main
+import "fmt"
+function main(){
+    fmt.Printf('Hello World!')
+}
+```
+
+编写Dockerfile.one文件
+
+```shell
+FROM golang:1.9-alpine
+RUN apk --no-cache add got ca-certificates
+WORKDIR /go/src/github.com/go/helloworld/
+COPY app.go .
+RUN go get -d -v github.com/go-sql-driver/mysql \
+	&& CGO_ENABLED=0 GOOS=linux go buld -a -installsuffix cgo -o app . \
+	&& cp /go/src/github.com/go/helloworld/app/root
+
+WORKDIR /root/
+CMD ["./app"]
+```
+
+构建镜像
+
+```shell
+docker build -t go/helloworld:1 -f Dockerfile.one
+```
+
+##### 分割到多个Dockerfile
+
+另一种方式，就是事先在一个Dockerfile将项目以及其依赖库编译测试打包好后，再将其拷贝到运行环境中，这种方式需要编写两个Dockerfile和一些编译脚本才能将两个阶段自动整合起来，这种方式虽然可以很好规避第一种方式存在的风险，但明显部署过程比较复杂
+
+Dockerfile.build文件
+
+```shell
+FROM golang:1.9-alpine
+RUN apk --no-cache add git
+WORKDIR /go/src/github.com/go/helloworld
+COPY app.go .
+RUN go get -d -v github.com/go-sql-driver/mysql \
+  && CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o app .
+```
+
+Dockerfile.copy文件
+
+```shell
+FROM alpine:latest
+RUN apk --no-cache add ca-certificates
+WORKDIR /root/
+COPY app .
+CMD ["./app"]
+```
+
+新建build.sh
+
+```shell
+#!/bin/sh
+echo Building go/helloworld:build
+
+docker build -t go/helloworld:build . -f Dockerfile.build
+
+docker create --name extract go/helloworld:build
+docker cp extrace:go/src/github.com/go/helloworld/app ./app
+docker rm -f extract
+
+echo Building go/helloworld:2
+
+docker build --no-cache -t go/helloworld:2 -f Dockerfile.copy 
+rm ./app
+```
+
+运行脚本即可构建镜像
+
+```shell
+chmod +x build.sh
+./build.sh
+```
+
+对比两种生成的镜像大小
+
+```shell
+$ docker image ls
+
+REPOSITORY      TAG    IMAGE ID        CREATED         SIZE
+go/helloworld   2      f7cf3465432c    22 seconds ago  6.47MB
+go/helloworld   1      f55d3e16affc    2 minutes ago   295MB
+```
+
+##### 使用多阶段构建
+
+为了解决以上的问题，17.05后开始支持多阶段构建（multistage builds）,使用多阶段构建可以解决上面的问题，并只需要编写一个Dockerfile：
+
+例如：
+
+编写Dockerfile文件：
+
+```shell
+FROM golang:1.9-alpine as builder
+RUN apk --no-cache add git
+WORKDIR /go/src/github.com/go/helloworld/
+RUN go get -d -v github.com/go-sql-driver/mysql
+COPY app.go .
+RUN CGO_ENABLED=0 GOOS=linux go build -a installsuffix cgo -o app
+FROM alpine:latest as prod
+RUN apk --no-cache add ca-certificates
+WORKDIR /root/
+COPY --from=0 /go/src/github.com/go/helloworld/app .
+CMD ["./APP"]
+```
+
+构建镜像
+
+```shell
+docker build -t go/helloworld:3 .
+```
+
+对比三个镜像
+
+```shell
+$ docker image ls
+
+REPOSITORY        TAG   IMAGE ID         CREATED            SIZE
+go/helloworld     3     d6911ed9c846     7 seconds ago      6.47MB
+go/helloworld     2     f7cf3465432c     22 seconds ago     6.47MB
+go/helloworld     1     f55d3e16affc     2 minutes ago      295MB
+```
+
+很明显使用多阶段构建的镜像体积小，同时也解决了上边的问题
+
+##### 只构建一阶段的镜像
+
+使用as为某一阶段命令，例如：
+
+```shell
+FROM golang:1.9-alpine as builder
+```
+
+只构建builder阶段的镜像，可以在使用 docker build的时候加上`--target`
+
+```shell
+docker build --target builder -t username/imagename:tag .
+```
+
+##### 构建时从其他镜像复制文件
+
+上面的例子使用 `COPY --from=0 /go/src/github.com/go/helloworld/app .`从上一阶段的镜像中复制文件，我们可以复制任意镜像中的文件
+
+```shell
+COPY --from=nginx:latest /ect/nginx/nginx.conf /nginx.conf
+```
+
+#### 其他制作镜像的方式
+
+##### 从rootfs压缩包导入
+
+格式：`docker import [选项] <文件>|<URL>|- [<仓库名>[:<标签>]]`
+
+压缩包可以是本地文件，远程Web文件，甚至是从标准输入中得出的，压缩包就会在镜像 `/`目录展开，并直接作为镜像第一层提交
+
+```shell
+# 创建一个OpenVZ的Ubuntu14.04模板的镜像：
+docker import \
+	http://download.openvz.org/template/precreated/ubuntu-14.04-x86_64-minimal.tar.gz \
+    openvz/ubuntu:14.04
+Downloading from http://download.openvz.org/template/precreated/ubuntu-14.04-x86_64-minimal.tar.gz
+sha256:f477a6e18e989839d25223f301ef738b69621c4877600ae6467c4e5289822a79B/78.42 MB    
+```
+
+这条命令自动下载了 `ubuntu-14.04-x86_64-minimal.tar.gz` 文件，并且作为根文件系统展开导入，并保存为镜像 `openvz/ubuntu:14.04`
+
+导入成功后，使用 docker image ls可以看到这个导入的镜像
+
+看到历史会看到描述中有导入的文件链接
+
+```shell
+$ docker history openvz/ubuntu:14.04
+IMAGE               CREATED              CREATED BY          SIZE                COMMENT
+f477a6e18e98        About a minute ago                       214.9 MB            Imported from http://download.openvz.org/template/precreated/ubuntu-14.04-x86_64-minimal.tar.gz
+```
+
+##### docker save和docker load
+
+将镜像保存为一个tar文件，然后传输到另外一个位置，再加载进来。这是在没有Docker Registry的做法，现在已不推荐。镜像迁移直接使用Docker Registry，无论是直接使用Docker Hub还是使用内网私有Registry都可以
+
+**保存镜像**
+
+docker save将镜像保存为归档文件
+
+```shell
+docker save alpine | gzip > alpine-latest.tar.gz
+```
+
+然后将它复制到另外一个机器上，用下面的命令加载镜像：
+
+```shell
+docker load -i alpine-latest.tar.gz
+Loaded image: alpine:latest
+```
+
+结合这两个命令和ssh甚至是pv，利用Linux管道可以写一个命令完成从一个机器将镜像迁移到另外一个机器，并且带进度条的功能：
+
+```shell
+docker save <镜像名> | bzip2 | pv |ssh <用户名>@<主机名> 'cat|docker load'
+```
+
+#### 镜像实现的原理
+
+Docker镜像是怎么实现增量的修改和维护的？
+
+每个镜像都由多层次构成，Docker使用Union FS将这些不同层结合到一个镜像中去。
+
+通常Union FS有两个用途，一方面可以实现不借助LVM,RAID将多个disk挂在同一个目录下，另一个更常用的就是讲一个只读的分支和一个可写的分支联合在一起。
+
+## 操作容器
+
+简单来说，容器似乎运行的一个或一组应用，以及它们的运行态环境，虚拟机可以理解为模拟运行的一整套操作系统（提供了运行态环境和其他系统环境）和跑在上面的应用
+
+#### 启动容器
+
+启动容器有两种方式，一种是基于镜像新建一个容器并启动，另外一个是将在终止状态（stopped）的容器重新启动。因为Docker的容器很轻级，用户可以随时删除和新建容器。
+
+##### 新建并启动
+
+```shell
+# 输出Hello World后终止容器
+docker run ubuntu:14.04 /bin/echo 'Hello world'
+
+# 启动一个bash终端，允许用户进行交互,-t选项让Docker分配一个伪终端pseudo-tty并绑定到容器的标准输入上，-i则让容器的标准输入保持打开。在交互模式下，用户可以通过所创建的终端来输入命令
+docker run -t -i ubuntu:14.04 /bin/bash
+```
+
+当利用 docker run来创建容器时，Docker在后台运行的标准操作包括：
+
+- 检查本地是否存在指定的镜像，不存在就从共有仓库下载
+- 利用镜像创建并启动一个容器
+- 分配一个文件系统，并在只读的镜像层外面挂载一层可读层
+- 从宿主主机配置的网桥接口中桥接一个虚拟接口到容器中去
+- 从地址池配置一个ip地址给容器
+- 执行用户指定的应用程序
+- 执行完毕后容器被终止
+
+##### 启动已终止的容器
+
+docker container start命令可以将一个已经终止的容器启动运行。
+
+容器的核心为所执行的应用程序，所需要的资源都是应用程序运行所必需的，除此之外没有其他资源。可以在伪终端中利用ps或top来查进程信息
+
+### 守护态运行
+
+更多时候，需要让Docker在后台运行而不是直接把执行命令的结果输出在当前宿主机下。可以通过添加 `-d`参数实现。
+
+不用 `-d`参数运行容器：
+
+```shell
+docker run ubuntu:17.10 /bin/sh -c "while true;do echo hello world;sleep 1;done"
+hello world
+hello world
+hello world
+hello world
+```
+
+容器会把输出结果stdout打印到宿主主机上面
+
+如果使用了 `-d`参数运行容器
+
+```shell
+docker run -d ubuntu:17.10 /bin/sh -c "while true;do echo hello world; sleep 1;done"
+77b2dc01fe0f3f1265df143181e7b9af5e05279a884f4776ee75350ea9d8017a
+```
+
+此时容器会在后台运行并不会把输出结果打印到宿主机上面（输出结果可以用docker logs查看）。
+
+注：容器是否会长久运行，和 docker run 指令的命令有关，和 `-d`参数无关。
+
+使用 `-d`参数启动后返回一个唯一的id，可以通过 docker container ls命令来查看容器信息
+
+```shell
+docker container ls
+CONTAINER ID  IMAGE         COMMAND               CREATED        STATUS       PORTS NAMES
+77b2dc01fe0f  ubuntu:17.10  /bin/sh -c 'while tr  2 minutes ago  Up 1 minute        agitated_wright
+
+# 通过 docker icontainer logis获取容器的输出信息
+docker container logs[container ID or NEWS]
+hello world
+hello world
+hello world
+hello world
+```
+
+### 终止
+
+使用 docker container stop 来终止一个运行中的容器
+
+当Docker 容器中指定的应用终结时，容器也会自动终止。上面只启动了一个容器，用户可以通过exit或者ctrl+d来推出终端，所创建的容器立刻终止。
+
+终止状态的容器可以使用 docker containers ls -a命令看到例如：
+
+```shell
+docker container ls -a
+CONTAINER ID        IMAGE                    COMMAND                CREATED             STATUS                          PORTS               NAMES
+ba267838cc1b        ubuntu:14.04             "/bin/bash"            30 minutes ago      Exited (0) About a minute ago                       trusting_newton
+98e5efa7d997        training/webapp:latest   "python app.py"        About an hour ago   Exited (0) 34 minutes ago                           backstabbing_pike
+```
+
+然后通过 docker run restart命令会让一个运行态的容器终止，然后再重新启动它。
+
+### 进入容器
+
+使用 `-d`参数时，容器启动后会进入后台。某些时候需要进入容器操作，包括docker attch命令或docker exec命令，推荐使用docker exec
+
+#### attch命令
+
+docker attch是Docker自带命令
+
+```shell
+docker run -dit ubuntu
+243c32535da7d142fb0e6df616a3c3ada0b8ab417937c853a9e1c251f499f550
+
+docker container ls
+CONTAINER ID        IMAGE               COMMAND             CREATED             STATUS              PORTS               NAMES
+243c32535da7        ubuntu:latest       "/bin/bash"         18 seconds ago      Up 17 seconds                           nostalgic_hypatia
+
+docker attach 243c
+root@243c32535da7:/#
+
+# 如果从这个stdin中exit，会导致容器的停止
+```
+
+#### exec命令
+
+**-i -t参数**
+
+docker exec可以跟多个参数
+
+只用 `-i`参数时，由于没有分配伪终端，界面没有Linux命令符，但命令执行结果仍然可以返回
+
+当 `-i`/`-t`参数一起使用时，可以看到Linux命令提示符
+
+```shell
+docker run -dit ubuntu
+69d137adef7a8a689cbcb059e94da5489d3cddd240ff675c640c8d96e84fe1f6
+
+docker container ls
+CONTAINER ID        IMAGE               COMMAND             CREATED             STATUS              PORTS               NAMES
+69d137adef7a        ubuntu:latest       "/bin/bash"         18 seconds ago      Up 17 seconds                           zealous_swirles
+
+docker exec -i 69d1 bash
+ls 
+bin
+boot
+dev
+...
+
+docker exec -it 69d1 bash
+root@xxx:/#
+```
+
+如果从这个stdin中exit，不会导致容器的停止。这就是为什么推荐使用 docker exec的原因
+
+### 导出和导入容器
+
+##### 导出容器
+
+```shell
+docker container ls -a
+CONTAINER ID        IMAGE               COMMAND             CREATED             STATUS                    PORTS               NAMES
+7691a814370e        ubuntu:14.04        "/bin/bash"         36 hours ago        Exited (0) 21 hours ago                       test
+
+docker export  7691a814370e > ubuntn.tar
+#这样导出容器快照到本地文件
+```
+
+##### 导入容器快照
+
+```shell
+# docker import 从容器快照文件中再导入为镜像
+cat ubuntu.tar | docker import - test/ubuntu:v1.0
+docker image ls
+REPOSITORY          TAG                 IMAGE ID            CREATED              VIRTUAL SIZE
+test/ubuntu         v1.0                9d37a6082e97        About a minute ago   171.3 MB
+
+# 指定URL或者某个目录来录入
+docker import http://example.com/exampleimage.tgz example/imagerepo
+
+# 用户既可以使用 docker load 来导入镜像存储文件到本地镜像库，也可以使用 docker import 来导入一个容器快照到本地镜像库。这两者区别在于容器快照文件将丢弃所有历史记录和元数据信息（即保存容器当时的快照状态），而镜像存储文件将保存完整记录，体积也要大，此外，从容器快照文件导入时可以重新制定标签等元数据信息
+```
+
+### 删除
+
+```she
+docker container rm haha
+haha
+```
+
+删除一个运行中的容器，可以添加 `-f`，Docker会发送 `SIGKILL`信号给容器
+
+清理所有处于终止状态的容器:
+
+```shell
+docker container prune
+```
+
+## 访问仓库
+
+仓库Repository是集中存放镜像的地方。
+
+一个容易混淆的概念是注册服务器（Registry）。实际上注册服务器是管理仓库的具体服务器，每个服务器可以有多个仓库，而每个仓库下面可以有多个镜像。从这方面来说，仓库被认为是一个具体的项目或者目录。例如对于 仓库地址`dl.dockerpool.com/ubuntu`来说，`dl.dockerpool.com`是注册服务器地址，`ubuntu`是仓库名。大部分时候并不需要严格区分这两者的概念
