feat: docker use repository

--- a/source/_posts/2020-07-07-docker.md
+++ b/source/_posts/2020-07-07-docker.md
@@ -1319,3 +1319,191 @@ docker container prune
 仓库Repository是集中存放镜像的地方。
 
 一个容易混淆的概念是注册服务器（Registry）。实际上注册服务器是管理仓库的具体服务器，每个服务器可以有多个仓库，而每个仓库下面可以有多个镜像。从这方面来说，仓库被认为是一个具体的项目或者目录。例如对于 仓库地址`dl.dockerpool.com/ubuntu`来说，`dl.dockerpool.com`是注册服务器地址，`ubuntu`是仓库名。大部分时候并不需要严格区分这两者的概念
+
+### Docker Hub
+
+Docker官方维护了一个公共仓库Docker Hub，大部分需求可以在Docker Hub中直接下载镜像实现
+
+在 https://cloud.docker.com 免费注册一个 Docker 账号，通过docker login命令交互式输入用户名和密码完成在命令行登录，docker logout退出登录。
+
+docker search命令查找官方仓库镜像，利用 docker pull命令将它下载到本地
+
+```shell
+# centos为关键词
+docker search centos
+NAME                                            DESCRIPTION                                     STARS     OFFICIAL   AUTOMATED
+centos                                          The official build of CentOS.                   465       [OK]
+tianon/centos                                   CentOS 5 and 6, created using rinse instea...   28
+blalor/centos                                   Bare-bones base CentOS 6.5 image                6                    [OK]
+saltstack/centos-6-minimal                                                                      6                    [OK]
+tutum/centos-6.4                                DEPRECATED. Use tutum/centos:6.4 instead. ...   5                    [OK]
+# 可以看到返回包含关键字的镜像，其中包括镜像名字、描述、收藏数（表示该镜像的受关注程度）、是否官方创建、是否自动创建。官方的镜像说明是官方项目组创建和维护的，automated资源允许用户验证镜像的来源和内容。根据是否官方提供，资源镜像可以分为两种：
+# 一种是类centor这样的镜像，被称为基础镜像或根镜像。这些基础镜像由Docker公司创建、验证、支持、提供。这样的镜像往往使用单个名词作为名字
+# 还有一种类型，比如tianon/centos镜像，由Docker用户创建并维护的，往往带有用户名称前缀，可以通过前缀username/来指定某个用户名提供的镜像，比如tianon用户
+
+```
+
+查找的时候通过 `--filter=stars=N`参数可以指定仅显示收藏数量为N以上的镜像
+
+#### 推送镜像
+
+用户登录后通过docker push推送自己的镜像到Docker Hub。
+
+```shell
+# username替换为Docker 账户用户名
+docker tag ubuntu:17.10 username/ubuntu:17.10
+
+docker image ls
+REPOSITORY                                               TAG                    IMAGE ID            CREATED             SIZE
+ubuntu                                                   17.10                  275d79972a86        6 days ago          94.6MB
+username/ubuntu                                          17.10                  275d79972a86        6 days ago          94.6MB
+
+docker push username/ubuntu:17.10
+
+docker search username
+NAME                      DESCRIPTION                                     STARS               OFFICIAL            AUTOMATED
+username/ubuntu
+```
+
+#### 自动创建
+
+Automated Builds功能对于需要经常升级镜像内程序来说，十分方便。
+
+用户创建了镜像，安装了某个软件，如果软件发布新版本则需要手动更新镜像。而自动创建运行用户通过Docker Hub指定一个跟踪网站上的项目，Github/BitBucket等，一旦项目发生新的提交或者创建新的标签，Docker Hub会自动构建镜像并推送到 Docker Hub中
+
+配置自动创建，有几个步骤：
+
+- 创建并登陆Docker Hub，以及目标网站
+- 在目标网站中连接账户到Docker Hub
+- 在Docker Hub中配置一个自动创建
+- 选取一个目标网站的项目（需含有Dockerfile）和分支
+- 指定Dockerfile的位置，并提交创建
+
+之后可以在Docker Hub的自动创建页面中跟踪每次创建的状态
+
+### 私有仓库
+
+用户可以创建一个本地仓库供私人使用
+
+docker-registry是官方提供的工具，用户构建私有镜像库
+
+#### 安装docker-registry
+
+通过官方registry镜像来运行
+
+```shell
+docker run -d -p 5000:5000 --restart=always --name registry registry
+```
+
+这将使用官方的registry镜像来启动私有仓库，默认情况下，仓库会被创建在容器的 `/var/lib/registry`目录下，可以通过`-v`参数指定镜像文件存在本地的指定路径。例如下面的例子将上传的镜像放到本地的`/opt/data/registry`
+
+```shell
+docker run -d \
+	-p 5000:5000
+	-v /opt/data/registry:/var/lib/registry \
+	registry
+```
+
+#### 上传、搜索、下载
+
+创建好私有仓库后，可以使用docker tag来标记一个镜像，然后将它推送到仓库，例如私有仓库地址为 `127.0.0.1:5000`,现在本机已有的镜像
+
+```shell
+$ docker image ls
+REPOSITORY                        TAG                 IMAGE ID            CREATED             VIRTUAL SIZE
+ubuntu                            latest              ba5877dc9bec        6 weeks ago         192.7 MB
+```
+
+docker tag将 ubuntu:latest镜像标记为 `127.0.0.1:5000/ubuntu/:latest`，格式为：
+
+> docker tag IMAGE[:TAG] [REGISTRT_HOST[:REGISTRY_PROT]/]REGISTORY[:TAG]
+
+```shell
+docker tag ubuntu:latest 127.0.0.1:5000/ubuntu:latest
+docker image ls
+REPOSITORY                        TAG                 IMAGE ID            CREATED             VIRTUAL SIZE
+ubuntu                            latest              ba5877dc9bec        6 weeks ago         192.7 MB
+127.0.0.1:5000/ubuntu:latest      latest              ba5877dc9bec        6 weeks ago         192.7 MB
+```
+
+docker push上传标记的镜像
+
+```shell
+docker push 127.0.0.1:5000/ubtuntu:latest
+The push refers to repository [127.0.0.1:5000/ubuntu]
+373a30c24545: Pushed
+a9148f5200b0: Pushed
+cdd3de0940ab: Pushed
+fc56279bbb33: Pushed
+b38367233d37: Pushed
+2aebd096e0e2: Pushed
+latest: digest: sha256:fe4277621f10b5026266932ddf760f5a756d2facd505a94d2da12f4f52f71f5a size: 1568
+```
+
+curl查看仓库中的镜像
+
+```shell
+curl 127.0.0.1:5000/v2/_catalog
+{"repositories":["ubuntu"]}
+```
+
+删除已有的镜像从私有仓库下载镜像
+
+```shell
+docker image rm 127.0.0.1:5000/ubuntu:latest
+
+docker pull 127.0.0.1:5000/ubuntu:latest
+Pulling repository 127.0.0.1:5000/ubuntu:latest
+ba5877dc9bec: Download complete
+511136ea3c5a: Download complete
+9bad880da3d2: Download complete
+25f11f5fb0cb: Download complete
+ebc34468f71d: Download complete
+2318d26665ef: Download complete
+
+$ docker image ls
+REPOSITORY                         TAG                 IMAGE ID            CREATED             VIRTUAL SIZE
+127.0.0.1:5000/ubuntu:latest       latest              ba5877dc9bec        6 weeks ago         192.7 MB
+
+```
+
+#### 注意事项
+
+如果不想使用 `127.0.0.1:5000` 作为仓库地址，比如想让本网段的其他主机也能把镜像推送到私有仓库。得把例如 `192.168.199.100:5000` 这样的内网地址作为私有仓库地址，这时会发现无法成功推送镜像。
+
+这是因为 Docker 默认不允许非 `HTTPS` 方式推送镜像。通过 Docker 的配置选项来取消这个限制.
+
+#### Ubuntu 14.04, Debian 7 Wheezy
+
+对于使用 `upstart` 的系统而言，编辑 `/etc/default/docker` 文件，在其中的 `DOCKER_OPTS` 中增加如下内容：
+
+```bash
+DOCKER_OPTS="--registry-mirror=https://registry.docker-cn.com --insecure-registries=192.168.199.100:5000"
+```
+
+重新启动服务。
+
+```bash
+$ sudo service docker restart
+```
+
+#### Ubuntu 16.04+, Debian 8+, centos 7
+
+对于使用 `systemd` 的系统，请在 `/etc/docker/daemon.json` 中写入如下内容（如果文件不存在新建该文件）
+
+```json
+{
+  "registry-mirror": [
+    "https://registry.docker-cn.com"
+  ],
+  "insecure-registries": [
+    "192.168.199.100:5000"
+  ]
+}
+```
+
+> 注意：该文件必须符合 `json` 规范，否则 Docker 将不能启动。
+
+#### 其他
+
+对于 Docker for Windows 、 Docker for Mac 在设置中编辑 `daemon.json` 增加和上边一样的字符串即可。
