fix: change toc

--- a/source/_posts/2020-07-07-docker.md
+++ b/source/_posts/2020-07-07-docker.md
@@ -1129,11 +1129,11 @@ Docker镜像是怎么实现增量的修改和维护的？
 
 简单来说，容器似乎运行的一个或一组应用，以及它们的运行态环境，虚拟机可以理解为模拟运行的一整套操作系统（提供了运行态环境和其他系统环境）和跑在上面的应用
 
-#### 启动容器
+### 启动容器
 
 启动容器有两种方式，一种是基于镜像新建一个容器并启动，另外一个是将在终止状态（stopped）的容器重新启动。因为Docker的容器很轻级，用户可以随时删除和新建容器。
 
-##### 新建并启动
+#### 新建并启动
 
 ```shell
 # 输出Hello World后终止容器
@@ -1153,13 +1153,13 @@ docker run -t -i ubuntu:14.04 /bin/bash
 - 执行用户指定的应用程序
 - 执行完毕后容器被终止
 
-##### 启动已终止的容器
+#### 启动已终止的容器
 
 docker container start命令可以将一个已经终止的容器启动运行。
 
 容器的核心为所执行的应用程序，所需要的资源都是应用程序运行所必需的，除此之外没有其他资源。可以在伪终端中利用ps或top来查进程信息
 
-### 守护态运行
+#### 守护态运行
 
 更多时候，需要让Docker在后台运行而不是直接把执行命令的结果输出在当前宿主机下。可以通过添加 `-d`参数实现。
 
@@ -1201,7 +1201,7 @@ hello world
 hello world
 ```
 
-### 终止
+#### 终止
 
 使用 docker container stop 来终止一个运行中的容器
 
@@ -1273,7 +1273,7 @@ root@xxx:/#
 
 ### 导出和导入容器
 
-##### 导出容器
+#### 导出容器
 
 ```shell
 docker container ls -a
@@ -1284,7 +1284,7 @@ docker export  7691a814370e > ubuntn.tar
 #这样导出容器快照到本地文件
 ```
 
-##### 导入容器快照
+#### 导入容器快照
 
 ```shell
 # docker import 从容器快照文件中再导入为镜像
