feat: add friend link

--- a/source/_posts/2021-04-25-rxjs.md
+++ b/source/_posts/2021-04-25-rxjs.md
@@ -889,3 +889,142 @@ const observable2 = interval(400);
 const merged = merge(observable1, observable2);
 ```
 
+### 操作符分类
+
+可分类：创建、转换、过滤、组合、错误处理、工具等等。
+
+#### 创建
+
+- ajax
+- bindCallback
+- bindNodeCallback
+- defer
+- empty
+- from
+- fromEvent
+- fromEventPattern
+- generate
+- interval
+- of
+- range
+- throwError
+- timer
+- iif
+
+#### 合并组合
+
+- combineLasted
+- concact
+- forkJoin
+- merge
+- race
+- zip
+- combineAll
+- concatAll
+- exhaust
+- mergeAll
+- startWith
+- withLastestFrom
+
+#### 转换
+
+- buffer
+- bufferCount
+- bufferTime
+- bufferToggle
+- bufferWhen
+- concatMap
+- concatMapTo
+- exhaust
+- exhaustMap
+- expand
+- groupBy
+- map
+- mapTo
+- mergeMap
+- mergeMapTo
+- mergeScan
+- pairwise
+- partition
+- pluck
+- scan
+- switchMap
+- switchMapTo
+- window
+- windowCount
+- windowTime
+- windowToggle
+- windowWhen
+
+#### 过滤
+
+- audit
+- auditTime
+- debounce
+- debounceTime
+- distinct
+- distinctKey
+- distinctUnitlChanged
+- distinctUnitKeyChanged
+- elementAt
+- filter
+- first
+- ignoreElements
+- last
+- sample
+- sampleTime
+- single
+- skip
+- skipLast
+- skipUntil
+- take
+- takeLast
+- takeUnit
+- takeWhile
+- throttle
+- throttleTime
+
+#### 多播
+
+- multicast
+- publish
+- publishBehaivior
+- publishLast
+- pulishReplay
+- share
+
+#### 错误处理
+
+- catchError
+- retry
+- retryWhen
+
+#### 工具
+
+- tap
+- delay
+- delayWhen
+- dematerizlize
+- materialize
+- observeOn
+- subscribeOn
+- timeInterval
+- timestamp
+- timeout
+- timeoutWith
+- toArray
+
+#### 条件与布尔
+
+- defaultIfEmpty
+- every
+- find
+- findIndex
+- isEmpty
+
+#### 数字和聚合
+
+- count
+- max
+- min
+- reduce
